File browser: "Add to Playlist" doesn't add playlist files to the playlist.

BUG: 229290